--- a/app.json
+++ b/app.json
@@ -28,13 +28,21 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Your location is required for emergency services, finding nearby healthcare facilities, and providing better medical assistance.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Your location is required for emergency services, finding nearby healthcare facilities, and providing better medical assistance."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION"
+      ]
     }
   }
 }
