--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-av": "^16.0.7",
     "expo-constants": "^18.0.10",
     "expo-document-picker": "^14.0.7",
+    "expo-haptics": "^15.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-notifications": "^0.32.12",
