--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~54.0.20",
     "expo-auth-session": "^7.0.8",
     "expo-av": "^16.0.7",
+    "expo-camera": "^17.0.8",
     "expo-constants": "^18.0.10",
     "expo-document-picker": "^14.0.7",
     "expo-haptics": "^15.0.7",
