--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.8",
     "firebase": "^12.5.0",
+    "i18n-js": "^4.5.1",
+    "i18next": "^25.6.0",
     "lodash": "^4.17.21",
     "nativewind": "^4.0.1",
     "react": "19.1.0",
+    "react-i18next": "^16.2.4",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-localize": "^3.6.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
