--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ EXPO_PUBLIC_FIREBASE_APP_ID=1:434384750625:web:9f80a31460cb2cf7f77b60
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-C6GZS5PWVW
 EXPO_PUBLIC_GOOGLE_CLIENT_ID=your-google-web-client-id
 EXPO_PUBLIC_GEMINI_API_KEY=AIzaSyBu5V3Xcxqpsprd-WKzbYAt-myGZrUu_GU
+EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=dtwftajii
+EXPO_PUBLIC_CLOUDINARY_UPLOAD_PRESET=upload_preset
