--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-camera": "^17.0.8",
     "expo-constants": "^18.0.10",
     "expo-document-picker": "^14.0.7",
+    "expo-file-system": "^19.0.17",
     "expo-haptics": "^15.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
