--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-notifications": "^0.32.12",
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "^15.0.8",
     "firebase": "^12.5.0",
     "i18n-js": "^4.5.1",
